--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="React portfolio showcasing some of my work and other things I've worked on." />
+    <meta name='image' property='og:image' content='https://user-images.githubusercontent.com/64335245/102401599-353ac900-3fa9-11eb-853b-8f40fbde5797.PNG' />
+    <meta name='author' content='Darius Wright' />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
